--- a/gbsplay/Makefile
+++ b/gbsplay/Makefile
@@ -1,9 +1,16 @@
+# $Id: Makefile,v 1.3 2003/08/23 13:55:42 mitch Exp $
+
+prefix = /usr/local
+exec_prefix = ${prefix}
+
+bindir = ${exec_prefix}/bin
+
 CFLAGS := -Wall -Wstrict-prototypes -Os -g
 LDFLAGS := -lm
 
 SRCS := gbsplay.c
 
-.PHONY: all distclean clean
+.PHONY: all distclean clean install
 all: gbsplay
 
 # determine the object files
@@ -22,6 +29,10 @@ distclean: clean
 
 clean:
 	find -regex ".*\.\([aos]\|so\)" -exec rm -f "{}" \;
+
+install: all
+	install -d $(bindir)
+	install -m 755 gbsplay $(bindir)/gbsplay
 
 gbsplay: gbsplay.o 
 	$(CC) $(LDFLAGS) -o $@ $<
