--- a/gbsplay/Makefile
+++ b/gbsplay/Makefile
@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.3 2003/08/23 13:55:42 mitch Exp $
+# $Id: Makefile,v 1.4 2003/08/23 14:17:03 mitch Exp $
 
 prefix = /usr/local
 exec_prefix = ${prefix}
@@ -10,7 +10,7 @@ LDFLAGS := -lm
 
 SRCS := gbsplay.c
 
-.PHONY: all distclean clean install
+.PHONY: all distclean clean install dist
 all: gbsplay
 
 # determine the object files
@@ -29,10 +29,19 @@ distclean: clean
 
 clean:
 	find -regex ".*\.\([aos]\|so\)" -exec rm -f "{}" \;
+	find -name "*~" -exec rm -f "{}" \;
+	rm -rf ./gbsplay
 
 install: all
 	install -d $(bindir)
 	install -m 755 gbsplay $(bindir)/gbsplay
+
+dist:	distclean
+	install -d ./gbsplay
+	install -m 644 *.c ./gbsplay/
+	install -m 644 Makefile depend.sh ./gbsplay/
+	tar -c gbsplay/ -vf ../gbsplay.tar.gz
+	rm -rf ./gbsplay
 
 gbsplay: gbsplay.o 
 	$(CC) $(LDFLAGS) -o $@ $<
