--- a/gbsplay/Makefile
+++ b/gbsplay/Makefile
@@ -1,9 +1,11 @@
-# $Id: Makefile,v 1.13 2003/08/24 12:36:24 mitch Exp $
+# $Id: Makefile,v 1.14 2003/08/24 13:30:10 mitch Exp $
 
 prefix = /usr/local
 exec_prefix = ${prefix}
 
 bindir = ${exec_prefix}/bin
+mandir = ${prefix}/man
+man1dir = $(mandir)/man1
 
 CFLAGS := -Wall -Wstrict-prototypes -Os -fomit-frame-pointer
 LDFLAGS := -lm
@@ -35,16 +37,21 @@ clean:
 install: all
 	install -d $(bindir)
 	install -m 755 gbsplay $(bindir)/gbsplay
+	install -d $(man1dir)
+	install -m 644 gbsplay.1 $(man1dir)/gbsplay.1
 
 uninstall:
 	rm -f $(bindir)/gbsplay
 	-rmdir $(bindir)
+	rm -f $(man1dir)/gbsplay.1
+	-rmdir $(man1dir)
 
 dist:	distclean
 	install -d ./gbsplay
 	install -m 644 *.c ./gbsplay/
 	install -m 644 *.h ./gbsplay/
 	install -m 644 Makefile ./gbsplay/
+	install -m 644 gbsplay.1 ./gbsplay/
 	install -m 755 depend.sh ./gbsplay/
 	tar -c gbsplay/ -vzf ../gbsplay.tar.gz
 	rm -rf ./gbsplay
